# devalang

./: .devalang  .gitignore  .npmignore  Cargo.toml  README.md  devalang.json  package-lock.json  package.json  project-version.json  tsconfig.json
.github/workflows/: ci.yml
docs/: CHANGELOG.md  COMMANDS.md  CONFIG.md  CONTRIBUTING.md  ROADMAP.md  SYNTAX.md  TODO.md
examples/: README.md  automation.deva  bank.deva  bus.deva  chain.deva  condition.deva  effect.deva  exported.deva  filter.deva  function.deva  index.deva  lfo.deva  loop.deva  pattern.deva  plugin.deva  routing.deva  synth.deva  synth_types.deva  test.deva  variables.deva
examples/advanced/: composition.deva  conditional.deva  events.deva  parallel_voices.deva  plugin.deva
examples/automation/: basic.deva  curves.deva  lfo.deva
examples/basic/: assign.deva  bind.deva  call_spawn.deva  direct_pattern.deva  group.deva  import_export.deva  load.deva  loop.deva  pattern.deva  sleep.deva  tempo.deva  variables.deva
examples/basic/samples/: lead.mid
examples/effects/: basic_effects.deva  effect_chain.deva
examples/routing/: generated.deva  mapping.deva  routing.deva
examples/scripts/: assign.deva  automation.deva  bank.deva  bind.deva  chain.deva  condition.deva  effect.deva  event.deva  function.deva  group.deva  load.deva  loop.deva  mapping.deva  module.deva  note.deva  pattern.deva  play.deva  plugin.deva  print.deva  routing.deva  routing_no_duck.deva  sleep.deva  synth.deva  tempo.deva  trigger.deva  variable.deva
examples/synth/: arpeggio.deva  chord.deva  chord_notation.deva  simple_note.deva  synth_types.deva
installer/windows/: .gitignore  build.ps1  devalang.wxs  license.rtf  strings-en-us.wxl
out-tsc/: api.d.ts  api.d.ts.map  api.js  api.js.map  index.d.ts  index.d.ts.map  index.js  index.js.map  types.d.ts  types.d.ts.map  types.js  types.js.map  wasm.d.ts  wasm.d.ts.map  wasm.js  wasm.js.map
out-tsc/core/: index.d.ts  index.js
out-tsc/core/functions/: index.d.ts  index.js
out-tsc/core/types/: index.d.ts  index.js  plugin.d.ts  result.d.ts  statement.d.ts  value.d.ts
out-tsc/examples/: basic-usage.d.ts  basic-usage.d.ts.map  basic-usage.js  basic-usage.js.map
out-tsc/pkg/: devalang_core.d.ts  devalang_core.js  devalang_core_bg.wasm.d.ts
out-tsc/scripts/: copy-wasm-dts.d.ts  copy-wasm-dts.d.ts.map  copy-wasm-dts.js  copy-wasm-dts.js.map  postbuild.js  postinstall.d.ts.map  postinstall.js  postinstall.js.map
out-tsc/scripts/version/: bump.d.ts  bump.d.ts.map  bump.js  bump.js.map  fetch.d.ts  fetch.d.ts.map  fetch.js  fetch.js.map  index.d.ts  index.d.ts.map  index.js  index.js.map  sync.d.ts  sync.d.ts.map  sync.js  sync.js.map
pkg/node/: README.md  devalang_wasm.d.ts  devalang_wasm.js  devalang_wasm_bg.wasm  devalang_wasm_bg.wasm.d.ts  package.json
pkg/web/: README.md  devalang_wasm.d.ts  devalang_wasm.js  devalang_wasm_bg.wasm  devalang_wasm_bg.wasm.d.ts  package.json
rust/: lib.rs  main.rs
rust/audio/: engine.rs  interpreter.rs  loader.rs  mod.rs  render.rs
rust/bindings/: Cargo.toml
rust/bindings/src/: lib.rs
rust/cli/: bank.rs  build.rs  check.rs  driver.rs  generator.rs  init.rs  install.rs  login.rs  mod.rs  new.rs  parser.rs  play.rs  telemetry.rs  template.rs  update.rs
rust/cli/addon/: commands.rs  download.rs  install.rs  list.rs  metadata.rs  mod.rs  remove.rs  update.rs  utils.rs
rust/cli/bank/: api.rs  commands.rs  mod.rs
rust/cli/check/: mod.rs
rust/cli/discover/: commands.rs  config.rs  fs.rs  install.rs  metadata.rs  mod.rs
rust/cli/init/: commands.rs
rust/cli/install/: addon.rs  bank.rs  commands.rs  mod.rs  plugin.rs
rust/cli/login/: commands.rs
rust/cli/me/: commands.rs
rust/cli/play/: commands.rs  io.rs  mod.rs  process.rs  realtime.rs  utils.rs
rust/cli/telemetry/: commands.rs  event_creator.rs  mod.rs  send.rs
rust/cli/template/: commands.rs
rust/cli/update/: commands.rs
rust/common/: api.rs  cdn.rs  mod.rs  sso.rs
rust/config/: driver.rs  loader.rs  mod.rs  ops.rs  settings.rs  stats.rs
rust/core/: mod.rs
rust/core/audio/: engine.rs  evaluator.rs  interpreter.rs  loader.rs  mod.rs  player.rs  render.rs  renderer.rs
rust/core/builder/: mod.rs
rust/core/debugger/: lexer.rs  logs.rs  mod.rs  module.rs  preprocessor.rs  store.rs
rust/core/error/: mod.rs
rust/core/lexer/: at.rs  brace.rs  bracket.rs  colon.rs  comment.rs  dot.rs  driver.rs  equal.rs  identifier.rs  indent.rs  mod.rs  newline.rs  number.rs  quote.rs  token.rs
rust/core/parser/: at.rs  bank.rs  dot.rs  driver.rs  identifer.rs  loop_.rs  mod.rs  statement.rs  tempo.rs  variable.rs
rust/core/plugin/: loader.rs  mod.rs  runner.rs
rust/core/preprocessor/: dependencies.rs  loader.rs  mod.rs  module.rs  processor.rs  resolver.rs
rust/core/shared/: bank.rs  duration.rs  mod.rs  value.rs
rust/core/store/: export.rs  function.rs  global.rs  import.rs  mod.rs  variable.rs
rust/core/types/: cli.rs  config.rs  mod.rs  module.rs  parser.rs  statement.rs  store.rs  token.rs  variable.rs
rust/installer/: addon.rs  bank.rs  mod.rs  plugin.rs  utils.rs
rust/macros/: Cargo.toml
rust/runner/: executer.rs  mod.rs
rust/types/: Cargo.toml
rust/utils/: Cargo.toml  config.rs  error.rs  file.rs  first_usage.rs  loader.rs  logger.rs  mod.rs  signature.rs  spinner.rs  telemetry.rs  version.rs  watcher.rs
rust/utils/src/: error.rs  file.rs  first_usage.rs  lib.rs  logger.rs  path.rs  signature.rs  spinner.rs  version.rs  watcher.rs
rust/web/: api.rs  auth.rs  cdn.rs  forge.rs  mod.rs
src/rust/: lib.rs
src/rust/web/: mod.rs
src/typescript/: api.ts  index.ts  types.ts  wasm.ts
templates/minimal/: .devalang  README.md
templates/welcome/: .devalang  README.md  index.deva
tests/: imports.rs  integration.rs
tests/rust/: cli_check_build.rs  cli_help.rs  cli_template_list.rs  cli_version.rs
tests/typescript/: index.spec.ts  playhead.spec.ts  render_e2e.spec.ts
typescript/: index.ts
typescript/core/: index.ts
typescript/pkg/: devalang_core.d.ts  devalang_core.ts
typescript/scripts/: copy-wasm-dts.ts  postbuild.ts  postinstall.ts
(+381 files in other folders)
