[package]
name = "devalang_utils"
version = "0.0.3"
description = "Utility functions and types for Devalang"
license = "MIT"
authors = ["Devaloop <contact@devaloop.com>"]
edition = "2024"

[dependencies]
devalang_types = { path = "../types", version = "0.0.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
include_dir = "0.7"
notify = "6.1"
zip = "4.3.0"
flate2 = "1.0"
tar = "0.4"
tempfile = "3"

[dependencies.crossterm]
version = "0.27"
optional = true

[dependencies.indicatif]
version = "0.17"
optional = true

[features]
cli = ["crossterm", "indicatif"]